Fix line items text alignment

--- a/www/webapp/static/webapp/sass/invoicing/_patterns.sass
+++ b/www/webapp/static/webapp/sass/invoicing/_patterns.sass
@@ -182,9 +182,12 @@
 
         textarea
           vertical-align: middle
-          height: 20px
+          line-height: 26px
           border: 0px
           width: 100%
+
+      &.total
+        line-height: 26px
 
       &.actions
         vertical-align: middle
